--- a/Trillo/sass/_layout.scss
+++ b/Trillo/sass/_layout.scss
@@ -34,6 +34,7 @@
 
 .detail {
   display: flex;
+  font-size: 1.4rem;
   padding: 4.5rem;
   background-color: var(--color-grey-light-1);
   border-bottom: var(--line);
