--- a/Trillo/sass/_layout.scss
+++ b/Trillo/sass/_layout.scss
@@ -49,6 +49,8 @@
 }
 
 .user-reviews {
-  background-color: green;
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
