--- a/Trillo/sass/_layout.scss
+++ b/Trillo/sass/_layout.scss
@@ -4,6 +4,12 @@
   background-color: var(--color-grey-light-1);
   box-shadow: var(--shadow-dark);
   min-height: 50rem;
+
+  @media screen and (max-width: $bp-largest) {
+    margin: 0;
+    max-width: 100%;
+    width: 100%;
+  }
 }
 
 .header {
@@ -18,6 +24,10 @@
 
 .content {
   display: flex;
+
+  @media screen and (max-width: $bp-medium) {
+    flex-direction: column;
+  }
 }
 
 .sidebar {
@@ -38,6 +48,10 @@
   padding: 4.5rem;
   background-color: var(--color-grey-light-1);
   border-bottom: var(--line);
+
+  @media screen and (max-width: $bp-medium) {
+    padding: 3rem;
+  }
 }
 
 .description {
@@ -46,6 +60,11 @@
   flex: 0 0 60%;
   margin-right: 4.5rem;
   padding: 3rem;
+
+  @media screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-right: 3rem;
+  }
 }
 
 .user-reviews {
@@ -53,8 +72,4 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.cta {
-  background-color: #fff;
 }
