--- a/Trillo/sass/components.scss
+++ b/Trillo/sass/components.scss
@@ -119,11 +119,24 @@
   list-style: none;
   margin-top: 3.5rem;
 
+  @media screen and (max-width: $bp-medium) {
+    display: flex;
+    margin: 0;
+  }
+
   &__item {
     position: relative;
 
     &:not(:last-child) {
       margin-bottom: 0.5rem;
+
+      @media screen and (max-width: $bp-medium) {
+        margin: 0;
+      }
+    }
+
+    @media screen and (max-width: $bp-medium) {
+      flex: 1;
     }
   }
 
@@ -161,6 +174,11 @@
     align-items: center;
     position: relative;
     z-index: 10;
+
+    @media screen and (max-width: $bp-medium) {
+      justify-content: center;
+      padding: 2rem;
+    }
   }
 
   &__icon {
@@ -177,6 +195,10 @@
   color: var(--color-grey-light-4);
   text-align: center;
   padding: 2.5rem;
+
+  @media screen and (max-width: $bp-medium) {
+    display: none;
+  }
 }
 
 // -----GALLERY-----
@@ -197,6 +219,7 @@
   display: flex;
   align-items: center;
   border-bottom: var(--line);
+  background-color: #fff;
 
   &__heading {
     font-size: 2.25rem;
@@ -334,6 +357,7 @@
   }
 
   &__friends {
+    display: flex;
   }
 
   &__photo {
@@ -357,6 +381,11 @@
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden;
+
+  @media screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
 
   &__text {
     margin-bottom: 2rem;
@@ -415,6 +444,11 @@
 .cta {
   padding: 3.5rem 0;
   text-align: center;
+  background-color: #fff;
+
+  @media screen and (max-width: $bp-medium) {
+    padding: 2.5rem 0;
+  }
 
   &__book-now {
     font-size: 2rem;
