--- a/Trillo/sass/_layout.scss
+++ b/Trillo/sass/_layout.scss
@@ -20,6 +20,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media screen and (max-width: $bp-medium) {
+    flex-wrap: wrap;
+    align-content: space-around;
+    height: 11rem;
+  }
 }
 
 .content {
@@ -52,6 +58,10 @@
   @media screen and (max-width: $bp-medium) {
     padding: 3rem;
   }
+
+  @media screen and (max-width: $bp-small) {
+    flex-direction: column;
+  }
 }
 
 .description {
@@ -64,6 +74,11 @@
   @media screen and (max-width: $bp-medium) {
     padding: 2rem;
     margin-right: 3rem;
+  }
+
+  @media screen and (max-width: $bp-small) {
+    margin-right: 0;
+    margin-bottom: 3rem;
   }
 }
 
